--- a/app/src/main/res/layout/fragment_change_language.xml
+++ b/app/src/main/res/layout/fragment_change_language.xml
@@ -4,7 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".ui.profile.ChangeLanguageFragment">
+    tools:context=".ui.profile.settings.ChangeLanguageFragment">
 
     <ScrollView
         android:layout_width="match_parent"
@@ -52,6 +52,7 @@
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:button="@drawable/radio_button"
+                    android:paddingHorizontal="12dp"
                     android:text="@string/kazakh_language" />
 
                 <RadioButton
@@ -61,8 +62,25 @@
                     android:layout_height="wrap_content"
                     android:layout_marginTop="24dp"
                     android:button="@drawable/radio_button"
+                    android:paddingHorizontal="12dp"
                     android:text="@string/russian_language" />
             </RadioGroup>
         </androidx.constraintlayout.widget.ConstraintLayout>
     </ScrollView>
+
+    <RelativeLayout
+        android:layout_width="match_parent"
+        android:layout_height="match_parent">
+
+        <androidx.appcompat.widget.AppCompatButton
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_alignParentBottom="true"
+            android:layout_marginStart="16dp"
+            android:layout_marginEnd="16dp"
+            android:layout_marginBottom="57dp"
+            android:background="@drawable/bg_blue_button"
+            android:text="@string/txt_apply"
+            android:textSize="17sp" />
+    </RelativeLayout>
 </FrameLayout>
