--- a/app/src/main/res/layout/fragment_faq.xml
+++ b/app/src/main/res/layout/fragment_faq.xml
@@ -4,7 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".ui.profile.FaqFragment">
+    tools:context=".ui.profile.settings.FaqFragment">
 
     <ScrollView
         android:layout_width="match_parent"
