--- a/app/src/main/res/layout/activity_player.xml
+++ b/app/src/main/res/layout/activity_player.xml
@@ -174,46 +174,206 @@
             app:unplayed_color="@color/blueColor1" />
     </androidx.constraintlayout.widget.ConstraintLayout>
 
-    <!--    <SeekBar-->
-    <!--        android:id="@+id/volumeBar"-->
-    <!--        android:layout_width="match_parent"-->
-    <!--        android:layout_height="wrap_content"-->
-    <!--        android:max="100"-->
-    <!--        android:progress="50" />-->
+    <androidx.constraintlayout.widget.ConstraintLayout
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:background="@color/colorPrimary">
 
-    <!--    <LinearLayout-->
-    <!--        android:id="@+id/sounds"-->
-    <!--        android:layout_width="match_parent"-->
-    <!--        android:layout_height="50dp"-->
-    <!--        android:layout_gravity="center"-->
-    <!--        android:gravity="center"-->
-    <!--        android:orientation="horizontal"-->
-    <!--        app:layout_constraintBottom_toBottomOf="parent"-->
-    <!--        app:layout_constraintEnd_toEndOf="parent"-->
-    <!--        app:layout_constraintStart_toStartOf="parent">-->
+        <androidx.appcompat.widget.AppCompatTextView
+            android:id="@+id/settingsSpeakerVoiceTitle"
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
+            android:layout_marginStart="16dp"
+            android:layout_marginTop="127dp"
+            android:layout_marginEnd="16dp"
+            android:text="@string/speaker_voice"
+            android:textColor="@color/white"
+            android:textSize="24sp"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toTopOf="parent" />
 
-    <!--        <TextView-->
-    <!--            android:id="@+id/sea"-->
-    <!--            android:layout_width="wrap_content"-->
-    <!--            android:layout_height="wrap_content"-->
-    <!--            android:layout_weight="1"-->
-    <!--            android:gravity="center"-->
-    <!--            android:text="Море" />-->
+        <androidx.appcompat.widget.AppCompatTextView
+            android:id="@+id/settingsBgMusicTitle"
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
+            android:layout_marginStart="16dp"
+            android:layout_marginTop="37dp"
+            android:layout_marginEnd="16dp"
+            android:text="@string/background_music"
+            android:textColor="@color/white"
+            android:textSize="24sp"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@id/settingsSpeakerVoiceTitle" />
 
-    <!--        <TextView-->
-    <!--            android:id="@+id/birds"-->
-    <!--            android:layout_width="wrap_content"-->
-    <!--            android:layout_height="wrap_content"-->
-    <!--            android:layout_weight="1"-->
-    <!--            android:gravity="center"-->
-    <!--            android:text="Птицы" />-->
+        <SeekBar
+            android:id="@+id/volumeBar"
+            android:layout_width="match_parent"
+            android:layout_height="44dp"
+            android:layout_marginTop="21dp"
+            android:max="100"
+            android:progress="50"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@id/settingsBgMusicTitle" />
 
-    <!--        <TextView-->
-    <!--            android:id="@+id/italy"-->
-    <!--            android:layout_width="wrap_content"-->
-    <!--            android:layout_height="wrap_content"-->
-    <!--            android:layout_weight="1"-->
-    <!--            android:gravity="center"-->
-    <!--            android:text="Италия" />-->
-    <!--    </LinearLayout>-->
+        <RadioGroup
+            android:id="@+id/bg_musics"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="40dp"
+            android:layout_marginBottom="16dp"
+            android:orientation="vertical"
+            android:paddingStart="16dp"
+            android:paddingEnd="16dp"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@id/volumeBar">
+
+            <RadioButton
+                android:id="@+id/bg_music1"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:button="@drawable/radio_button"
+                android:paddingHorizontal="12dp"
+                android:tag="bg_music1.mp3"
+                android:text="@string/bg_music1"
+                android:textColor="@color/white"
+                android:textSize="17sp" />
+
+            <RadioButton
+                android:id="@+id/bg_music2"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="16dp"
+                android:button="@drawable/radio_button"
+                android:paddingHorizontal="12dp"
+                android:tag="bg_music2.mp3"
+                android:text="@string/bg_music2"
+                android:textColor="@color/white"
+                android:textSize="17sp" />
+
+            <RadioButton
+                android:id="@+id/bg_music3"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="16dp"
+                android:button="@drawable/radio_button"
+                android:paddingHorizontal="12dp"
+                android:tag="bg_music3.mp3"
+                android:text="@string/bg_music3"
+                android:textColor="@color/white"
+                android:textSize="17sp" />
+
+            <RadioButton
+                android:id="@+id/bg_music4"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="16dp"
+                android:button="@drawable/radio_button"
+                android:paddingHorizontal="12dp"
+                android:tag="bg_music4.mp3"
+                android:text="@string/bg_music4"
+                android:textColor="@color/white"
+                android:textSize="17sp" />
+
+            <RadioButton
+                android:id="@+id/bg_music5"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="16dp"
+                android:button="@drawable/radio_button"
+                android:paddingHorizontal="12dp"
+                android:tag="bg_music5.mp3"
+                android:text="@string/bg_music5"
+                android:textColor="@color/white"
+                android:textSize="17sp" />
+
+            <RadioButton
+                android:id="@+id/bg_music6"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="16dp"
+                android:button="@drawable/radio_button"
+                android:paddingHorizontal="12dp"
+                android:tag="bg_music6.mp3"
+                android:text="@string/bg_music6"
+                android:textColor="@color/white"
+                android:textSize="17sp" />
+
+            <RadioButton
+                android:id="@+id/bg_music7"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="16dp"
+                android:button="@drawable/radio_button"
+                android:paddingHorizontal="12dp"
+                android:tag="bg_music7.mp3"
+                android:text="@string/bg_music7"
+                android:textColor="@color/white"
+                android:textSize="17sp" />
+
+            <RadioButton
+                android:id="@+id/bg_music8"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="16dp"
+                android:button="@drawable/radio_button"
+                android:paddingHorizontal="12dp"
+                android:tag="bg_music8.mp3"
+                android:text="@string/bg_music8"
+                android:textColor="@color/white"
+                android:textSize="17sp" />
+
+            <RadioButton
+                android:id="@+id/bg_music9"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="16dp"
+                android:button="@drawable/radio_button"
+                android:paddingHorizontal="12dp"
+                android:tag="bg_music9.mp3"
+                android:text="@string/bg_music9"
+                android:textColor="@color/white"
+                android:textSize="17sp" />
+
+            <RadioButton
+                android:id="@+id/bg_music10"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="16dp"
+                android:button="@drawable/radio_button"
+                android:paddingHorizontal="12dp"
+                android:tag="bg_music10.mp3"
+                android:text="@string/bg_music10"
+                android:textColor="@color/white"
+                android:textSize="17sp" />
+
+            <RadioButton
+                android:id="@+id/bg_music11"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="16dp"
+                android:button="@drawable/radio_button"
+                android:paddingHorizontal="12dp"
+                android:tag="bg_music11.mp3"
+                android:text="@string/bg_music11"
+                android:textColor="@color/white"
+                android:textSize="17sp" />
+
+            <RadioButton
+                android:id="@+id/bg_music12"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="16dp"
+                android:button="@drawable/radio_button"
+                android:paddingHorizontal="12dp"
+                android:tag="bg_music12.mp3"
+                android:text="@string/bg_music12"
+                android:textColor="@color/white"
+                android:textSize="17sp" />
+        </RadioGroup>
+
+    </androidx.constraintlayout.widget.ConstraintLayout>
 </FrameLayout>
