--- a/app/src/main/res/layout/item_main_page.xml
+++ b/app/src/main/res/layout/item_main_page.xml
@@ -12,13 +12,20 @@
         style="@style/CollectionTitle"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:layout_marginStart="16dp"
+        android:layout_marginTop="36dp"
+        android:textColor="@color/white"
+        android:textSize="24sp"
         tools:text="Тэг для списка" />
 
     <androidx.recyclerview.widget.RecyclerView
-        android:id="@+id/rvCollection"
+        android:id="@+id/instruments"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        android:layout_marginStart="16dp"
+        android:layout_marginTop="16dp"
+        android:overScrollMode="never"
+        android:layout_marginEnd="16dp"
         android:orientation="horizontal"
         app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager" />
-
 </androidx.appcompat.widget.LinearLayoutCompat>
