--- a/app/src/main/res/layout/item_instrument.xml
+++ b/app/src/main/res/layout/item_instrument.xml
@@ -1,6 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:id="@+id/llContainer"
+<androidx.appcompat.widget.LinearLayoutCompat xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="wrap_content"
     android:layout_height="wrap_content"
     android:layout_marginEnd="8dp"
@@ -8,18 +7,26 @@
 
     <androidx.appcompat.widget.AppCompatImageView
         android:id="@+id/ivBanner"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content" />
+        android:layout_width="240dp"
+        android:layout_height="140dp"
+        android:scaleType="fitXY" />
 
     <androidx.appcompat.widget.AppCompatTextView
         android:id="@+id/tvTitle"
-        android:layout_width="wrap_content"
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:textColor="@color/white" />
+        android:layout_marginTop="8dp"
+        android:textColor="@color/blackText"
+        android:textSize="13sp"
+        android:textStyle="bold" />
 
     <androidx.appcompat.widget.AppCompatTextView
         android:id="@+id/tvDescription"
-        android:layout_width="wrap_content"
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:textColor="@color/white" />
-</LinearLayout>
+        android:layout_marginTop="8dp"
+        android:ellipsize="end"
+        android:lines="2"
+        android:textColor="@color/blackText"
+        android:textSize="13sp" />
+</androidx.appcompat.widget.LinearLayoutCompat>
