--- a/app/src/main/res/layout/fragment_promocode.xml
+++ b/app/src/main/res/layout/fragment_promocode.xml
@@ -60,6 +60,7 @@
                     android:text="@string/txt_promocode" />
 
                 <androidx.appcompat.widget.AppCompatEditText
+                    android:id="@+id/etPromocode"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:layout_marginTop="8dp"
@@ -79,6 +80,7 @@
         android:layout_height="match_parent">
 
         <androidx.appcompat.widget.AppCompatButton
+            android:id="@+id/btnNext"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_alignParentBottom="true"
